--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text&display=swap');
 body{
-  font-family: 'Nanum Gothic', 돋움;
+  font-family: 'Big Shoulders Stencil Text', cursive;
 }
 div {
       font-size : 20pt;
@@ -14,12 +14,13 @@ div {
     .link {
       border-left-width:0px;
       margin-bottom : 2px dashed #CEFBC9;
-      font-size:20px;
+      font-size:40px;
       padding-left : 10px;
     }
     a {
       text-decoration:none;
-      color : salmon;
+      color :black;
+    }
       
 
       
