--- a/style.css
+++ b/style.css
@@ -3,24 +3,21 @@ body{
   font-family: 'Big Shoulders Stencil Text', cursive;
 }
 div {
-      font-size : 20pt;
-      margin : 20px;
+      font-size :50px;
+      margin :50px;
       padding-left : 30px;
       border-left : 1px solid green;
-      border-left-width : 10px;
-      line-height : 2;
-      font-family: 'nanum Gothic', 돋움;
+      border-left-width :10px;
+      line-height :1;
+      font-family: 'Big Shoulders Stencil Text', cursive;
     } 
     .link {
       border-left-width:0px;
-      margin-bottom : 2px dashed #CEFBC9;
-      font-size:40px;
-      padding-left : 10px;
+      margin-bottom :2px dashed #CEFBC9;
+      font-size:50px;
+      padding-left :10px;
     }
     a {
       text-decoration:none;
-      color :black;
+      
     }
-      
-
-      
